[gd_scene load_steps=8 format=2]

[ext_resource path="res://weapon_system/projectiles/b_ice_rhombus/b_ice_rhombus.gd" type="Script" id=1]
[ext_resource path="res://weapon_system/projectiles/b_ice_rhombus/assets/Sprite-attack effect2.png" type="Texture" id=2]
[ext_resource path="res://weapon_system/projectiles/b_ice_rhombus/assets/Sprite-attack effect1.png" type="Texture" id=3]

[sub_resource type="PhysicsMaterial" id=1]

friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]


[sub_resource type="ParticlesMaterial" id=3]

flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=4]

tracks/0/type = "value"
tracks/0/path = NodePath("Area2D:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[node name="b_ice_rhombus" type="RigidBody2D"]
collision_layer = 32768
mode = 2
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
continuous_cd = 1
linear_damp = 0.0
angular_damp = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="disabledShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
scale = Vector2( 4, 4 )
emitting = false
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="pixel_perfect_rotation" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_lock_": true
}

[node name="Viewport" type="Viewport" parent="pixel_perfect_rotation"]
size = Vector2( 16, 16 )
transparent_bg = true
disable_3d = true
usage = 1
render_target_v_flip = true

[node name="original_sprite" type="Sprite" parent="pixel_perfect_rotation/Viewport"]
position = Vector2( 8, 8 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -8, -8 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
centered = false

[node name="anim" type="AnimationPlayer" parent="."]
anims/delete_bullet = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
gravity = 0.0
linear_damp = 0.0
collision_layer = 32768
collision_mask = 2049
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( 0, -16, 8, -8, 0, 16, -8, -8 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
